--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@ section{
     
 }
 .section_title  h2{
-    position: relative;
+    position: relative ;
     text-align: center;
     color:rgb(255, 255, 255);
-    font-size: 30px;
+    font-size: 30px ;
     transition:all .4s ease-in-out;
 }
 .section_title h2:hover{
@@ -41,7 +41,7 @@ section{
 header{
     background: rgb(44,37,37);
     border-bottom: 2px solid white;
-    position:fixed;
+    position:fixed ;
     width:100%;
     z-index: 5;
 }
@@ -121,7 +121,7 @@ header{
 .btn a{
     color: #FFFFFF;
 }
-/* ***************yazılımlar******* */
+/* ***************CV******* */
 
 .innercv{
     
@@ -159,4 +159,59 @@ header{
 .innercv_child p{
     font-size: 15px;
 }
+
+/* *******İLETİŞİM******* */
+.inner_contact{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 40%;
+}
+.slayt{
+    
+    
+    margin: 0 auto;
+    width: 80%;
+    box-shadow: 0px 0px 17px -2px rgba(255, 255, 255, 0.55);
+    
+}
+.icerik h2{
+    padding-top: 10px;
+    color: #ffffff;
+}
+.paragraf p{
+    color: #FFFFFF;
+}
+.icerik{
+    
+    margin: 20px auto;
+    width: 80%;
+    padding:10px 2%;
+    border-radius: 5px;
+    background: rgba(55,66,80,0.281);
+    border: 1px solid transparent;
+    transition: all .4s ease-in;
+}
+.icerik:hover{
+    border:1px solid #24CAAC;
+}
+.icerik h4{
+    color: #FFFFFF;
+}
+.ek{
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    width: 90%;
+}
+.slayt2{
+    margin: 0 auto;
+    box-shadow: 0px 0px 17px -2px rgba(255, 255, 255, 0.55);
+    width: 80%;
+    
+    
+}
+
+
 
